--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -139,7 +139,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 50000/50000 [21:40<00:00, 38.45it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 50000/50000 [21:31<00:00, 38.70it/s]\n"
      ]
     }
    ],
@@ -147,31 +147,33 @@
     "temp=[]\n",
     "for sent in tqdm(df.review.values):\n",
     "    #punctuation removal\n",
-    "    sent=re.sub('['+string.punctuation+']',\"\",sent)\n",
+    "    sent=re.sub('['+string.punctuation+']',' ',sent)\n",
     "    #tokenize\n",
     "    tokens=word_tokenize(sent)\n",
     "    #lower case convertion & POS tagging\n",
     "    tokens_pos=pos_tag([w.lower() for w in tokens])\n",
     "    \n",
-    "    #stopwords removal & lemmatization\n",
-    "    major_sent=[lemmatizer.lemmatize(w,tag_map[pos[0]]) for w,pos in tokens_pos if( w not in eng_sw)]\n",
+    "    #stopwords removal & only words & len(word)>2 & lemmatization\n",
+    "    major_sent=[lemmatizer.lemmatize(w,tag_map[pos[0]]) for w,pos in tokens_pos if( (w not in eng_sw) \n",
+    "                                                                                   and (w.isalpha()) \n",
+    "                                                                                   and (len(w)>2))]\n",
     "    \n",
     "    temp.append(major_sent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_processed=pd.DataFrame({'major_sent':list(map(lambda l:' '.join(l),temp)),'label':df.sentiment.values})\n",
-    "df.to_csv(\"./logs/processedData.csv\",index=False)"
+    "df_processed.to_csv(\"./logs/processedData.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +204,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>go saw movie last night coax friend mine ill a...</td>\n",
+       "      <td>go saw movie last night coax friend mine admit...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -222,7 +224,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>bill paxton take true story 1913 u golf open m...</td>\n",
+       "      <td>bill paxton take true story golf open make fil...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -231,14 +233,14 @@
       ],
       "text/plain": [
        "                                          major_sent  label\n",
-       "0  go saw movie last night coax friend mine ill a...      1\n",
+       "0  go saw movie last night coax friend mine admit...      1\n",
        "1  actor turn director bill paxton follow promisi...      1\n",
        "2  recreational golfer knowledge sport history pl...      1\n",
        "3  saw film sneak preview delightful cinematograp...      1\n",
-       "4  bill paxton take true story 1913 u golf open m...      1"
+       "4  bill paxton take true story golf open make fil...      1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
